--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@react-three/drei": "^9.122.0",
     "@react-three/fiber": "^8.18.0",
     "@tanstack/react-query": "^5.83.0",
+    "@tsparticles/react": "^3.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -56,13 +57,16 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.61.1",
     "react-icons": "^5.5.0",
+    "react-parallax-tilt": "^1.7.314",
     "react-resizable-panels": "^2.1.9",
     "react-router-dom": "^6.30.1",
+    "react-tsparticles": "^2.12.2",
     "recharts": "^2.15.4",
     "sonner": "^1.7.4",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.181.2",
+    "tsparticles": "^3.9.1",
     "vaul": "^0.9.9",
     "zod": "^3.25.76"
   },
