--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "@react-three/fiber": "^8.18.0",
     "@tanstack/react-query": "^5.83.0",
     "@tsparticles/react": "^3.0.0",
+    "browserslist": "^4.28.1",
+    "caniuse-lite": "^1.0.30001759",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
