--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "date-fns": "^3.6.0",
     "emailjs-com": "^3.2.0",
     "embla-carousel-react": "^8.6.0",
-    "framer-motion": "^12.23.24",
+    "framer-motion": "^12.23.25",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.462.0",
     "next-themes": "^0.3.0",
@@ -60,6 +60,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.61.1",
     "react-icons": "^5.5.0",
+    "react-intersection-observer": "^10.0.0",
     "react-parallax-tilt": "^1.7.314",
     "react-resizable-panels": "^2.1.9",
     "react-router-dom": "^6.30.1",
